--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ on:
       # Push events on main branch
       - main
       # Push events to branches matching refs/heads/release/**
-      - 'release/**'
+      - 'test-new-releases-api-staging'
 
 
 env:
